@@ -317,6 +317,7 @@ Insert_attributes(DBFHandle hDBFHandle, int row)
                }
 	       // pg_atoi() does not do this
 	       if ( val[0] == '\0' ) { val[0] = '0'; val[1] = '\0'; }
+	       if ( val[strlen(val)-1] == '.' ) val[strlen(val)-1] = '\0';
                break;
             case FTString:
             case FTLogical:
@@ -1666,6 +1667,10 @@ utf8 (const char *fromcode, char *inputbuf)
 
 /**********************************************************************
  * $Log$
+ * Revision 1.101  2005/10/21 11:33:55  strk
+ * Applied patch by Lars Roessiger handling numerical values with a trailing decima
+ * l dot
+ *
  * Revision 1.100  2005/10/13 13:40:20  strk
  * Fixed return code from shp2pgsql
  *
